Fix bad echo UX because of css module loading

--- a/css/default.css
+++ b/css/default.css
@@ -791,3 +791,15 @@ ins.adsbygoogle {
 	min-width: 15rem;
 }
 /* AdSense End */
+
+/* Echo */
+#pt-notifications-alert {
+	position: relative;
+	float: right;
+	list-style: none;
+	top: 0.8rem;
+	font-size: 0.9rem;
+	margin-right: 0.6rem;
+	margin-left: 0.8rem;
+}
+/* Echo End */
